test_suite/tests/compile_fail/rename_spaces.stderr
error: A rename cannot contain spaces
 --> tests/compile_fail/rename_spaces.rs:5:21
  |
5 |     #[arri(rename = "this should not contain spaces")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
